--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,4 +1,8 @@
 http {
+    fastcgi_read_timeout 120s;
+    proxy_read_timeout 120s;
+    proxy_send_timeout 120s;
+    proxy_connect_timeout 120s;
     server {
         listen 80;
         listen 443 ssl;
